--- a/package.json
+++ b/package.json
@@ -21,9 +21,15 @@
   },
   "homepage": "https://github.com/maria6417/WorldOfPhotos#readme",
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.10.0",
+    "@mui/x-date-pickers": "^5.0.0-beta.4",
     "@react-jvectormap/core": "^1.0.3",
     "@react-jvectormap/world": "^1.1.2",
     "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
     "country-list": "^2.2.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -32,7 +38,8 @@
     "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sequelize": "^6.21.3"
+    "sequelize": "^6.21.3",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
