--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "sequelize": "^6.21.3",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
